# wordle-termo-C

./: CMakeLists.txt  LICENSE  README.md  backupPalavras.c  cores.c  cores.h  iniciarjogo.c  main.c  palavras.txt  palavras2.txt  processarTentativa.c  processarTentativa.h
lib/: backupPalavras.h  cores.c  cores.h  lib.h  menu.c  menu.h  processarTentativa.c  processarTentativa.h
